# Documind-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pdf_ragpromax.py  pyproject.toml  ragas_evaluation.py
app/: main.py
app/api/: routes.py
app/core/: rag_engine.py
app/models/: schemas.py
app/utils/: config_loader.py
config/: config.json
test_vector_store/: chroma.sqlite3
