[project]
name = "documind"
version = "0.1.0"
description = "Production-grade RAG API with Rerank"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "langchain-huggingface>=0.1.0,<1.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "huggingface-hub>=0.23.0,<1.0.0",
    "dashscope>=1.20.0,<2.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "docx2txt>=0.8,<1.0",
    "tqdm>=4.66.0,<5.0.0",
    "tenacity>=8.0.0,<9.0.0",           # 【新增】用于 API 重试
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",             # 用于测试 FastAPI
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]